syntax = "proto3";
package universe;

service Universe {
    rpc CreateKeyspace (CreateKeyspaceRequest) returns (CreateKeyspaceResponse);
    rpc ListKeyspaces (ListKeyspacesRequest) returns (ListKeyspacesResponse);
    rpc GetKeyspaceInfo (GetKeyspaceInfoRequest) returns (GetKeyspaceInfoResponse);
}

enum Cloud {
    AWS = 0;
    AZURE = 1;
    GCP = 2;
}

message Region {
    oneof cloud {
        Cloud public_cloud = 1;
        string other_cloud = 2;
    }
    string name = 3;
}

message Zone {
    Region region = 1;
    string name = 2;
}

message KeyRangeRequest {
    // If either is unspecified, that end is unbounded.
    bytes lower_bound_inclusive = 1;
    bytes upper_bound_exclusive = 2;
}

message KeyRange {
    string base_range_uuid = 1;
    bytes lower_bound_inclusive = 2;
    bytes upper_bound_exclusive = 3;
}

message ZonedKeyRange {
    Zone zone = 1;
    KeyRange key_range = 2;
}

message CreateKeyspaceRequest {
    string namespace = 1;
    string name = 2;
    Zone primary_zone = 3;
    repeated Zone secondary_zones = 4;
    repeated KeyRangeRequest base_key_ranges = 5;
}

message CreateKeyspaceResponse {
    string keyspace_id = 1;
}

message KeyspaceInfo {
    string keyspace_id = 1;
    string namespace = 2;
    string name = 3;
    Zone primary_zone = 4;
    repeated KeyRange base_key_ranges = 5;
    repeated Zone secondary_zones = 6;
    repeated ZonedKeyRange secondary_key_ranges = 7;
}

message ListKeyspacesRequest {
    Region region = 1;
}

message ListKeyspacesResponse {
    repeated KeyspaceInfo keyspaces = 1;
}

message Keyspace {
    string namespace = 1;
    string name = 2;
}
message GetKeyspaceInfoRequest {
    oneof keyspace_info_search_field {
        Keyspace keyspace = 1;
        string keyspace_id = 2;
    }
}

message GetKeyspaceInfoResponse {
    KeyspaceInfo keyspace_info = 1;
}